--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,7 +6,7 @@
     font-size: 40px;
     line-height: 44px;
     background-color: #2A2C2F;
-    margin: 0 16px 16px;
+    margin: 0;
     text-align: center;
     /*width: 288px;
     height: 88px; */
