--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,9 @@
 .header {
   background-color: #2A2C2F; 
   object-position: center;
-  padding: 16px 16px;
-  width: 288px;
+  width: 100%;
   height: 42px;
+  padding-top: 16px;
   display: flex;
+  flex-direction: row;
 }
