--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,5 +5,19 @@
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.09;
+}
+
+@media screen and (min-width: 768px) {
+  .intro__title {
+    margin-top: 88px;
+    font-size: 54px;
+    line-height: 1.07;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__title {
+    margin-top: 92px;
+  }
 }
