--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,9 +3,30 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     text-align: center;  
     color: #FFFFFF;
     position: absolute;
-    margin: 119px 16px 33px 16px;
+    margin: 119px 16px;
 }
+
+@media screen and (min-width: 768px) {
+  .cover__subtitle {
+    font-size: 18px;
+    line-height: 1.22;
+    width: 360px;
+    margin: 299px 204px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+    .cover__subtitle {
+      margin: 379px 332px;
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+    .cover__subtitle {
+      margin: 429px 412px;
+    }
+  }
