--- a/blocks/header/__lang-link/header__lang-link_en.css
+++ b/blocks/header/__lang-link/header__lang-link_en.css
@@ -4,8 +4,20 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 20px;
+  line-height: 1.11;
   text-align: center;
   margin-top: 14px;
   text-decoration: none;
+  width: 22px;
+  height: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-link_en {
+    width: 29px;
+    height: 28px;
+    font-size: 24px;
+    line-height: 1.17;
+    margin-top: 18px;
+  }
 }
