--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,7 +4,13 @@
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   color:#fff;
   list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .intro__list {
+    margin-top: 33px;
+  }
 }
