--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,13 @@
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 1.4;
   letter-spacing: 0.15em;
+  margin-top: 8px;
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__caption {
+    margin-left: 100px;
+  }
 }
