--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,13 +1,30 @@
 .lead__title {
-    color: #fff;
-    font-weight: 900;
-    font-family: Inter;
-    font-style: normal;
-    font-size: 40px;
-    line-height: 44px;
-    background-color: #2A2C2F;
-    margin: 0;
-    text-align: center;
-    /*width: 288px;
-    height: 88px; */
+  color: #fff;
+  font-weight: 900;
+  font-family: Inter;
+  font-style: normal;
+  font-size: 40px;
+  line-height: 1.1;
+  background-color: #2A2C2F;
+  text-align: center;
+  margin: 48px auto 16px;
+  width: 288px;
+  height: 88px;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .lead__title {
+    margin-bottom: 32px;
+    font-size: 96px;
+    line-height: 1.04;
+    width: 720px;
+    height: 200px;
+  }
+}
+  
+@media screen and (min-width: 1280px) {
+  .lead__title {
+    margin-top: 56px;
+  }
 }
