--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,6 +7,19 @@
   max-width: 100vw;
 }
 
+@media screen and (min-width: 768px) {
+  .page {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .page {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
 
 * {
   margin: 0;
