--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,32 @@
 .photo-grid {
   margin-top: 64px;
+  margin-bottom: 14px;
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(216px, 1fr)); 
-  grid-template-columns: repeat(auto-fit,  minmax(288px, 1fr));
-  gap: 16px;
+  grid-template-rows: repeat(auto-fit, minmax(213px, 1fr)); 
+  grid-template-columns: repeat(auto-fit,  minmax(284px, 1fr));
+  gap: 12px;
   box-sizing: border-box;
   justify-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .photo-grid {
+    margin-top: 88px;
+    margin-bottom: 16px;
+    gap: 16px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .photo-grid {
+    margin-top: 92px;
+    margin-bottom: 12px;
+    gap: 14px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo-grid {
+    gap: 16px;
+  }
 }
