--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,14 @@
 .place__image {
-  margin: 32px -16px 32px;
+  margin-top: 32px;
   width: 100vw;
+  margin-left: -16px;
+  margin-right: -16px;
   object-fit: cover;
   object-position: center;
+}
+
+@media screen and (min-width: 768px) {
+  .place__image {
+    margin: 0;
+  }
 }
