--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -3,7 +3,12 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-decoration-line: underline;
   color: #FFFFFF;
+  transition: opacity 0.1s linear;
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
