--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,6 +4,20 @@
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.09;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.10;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 1.06;
+  }
 }
