--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,9 +3,21 @@
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 1;
     letter-spacing: 0.2em;
     color: #AAAAAA;
     margin-top: 32px;
     margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .place__url-heading {
+    margin: 0 auto 12px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__url-heading {
+    line-height: 1.7;
+  }
 }
