--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,26 @@
 .place {
-    margin-top: 50px;
+  padding-top: 50px;
 }
 
-.place:first-of-type {
-    margin-top: 64px;
+@media screen and (min-width: 768px) {
+  .place {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(320px,1fr));
+    row-gap: 48px;
+    column-gap: 28px;
+    padding-top: 72px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place {
+    padding-top: 80px;
+    column-gap: 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+    .place {
+      column-gap: 40px;
+    }
 }
