--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,6 +3,13 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 14px;
+    line-height: 1;
     color: #FFFFFF;
 }
+
+@media screen and (min-width: 768px) {
+    .footer__copyright {
+      font-size: 14px;
+      line-height: 1.14;
+    }
+  }
