--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,7 +3,15 @@
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
-  line-height: 24px;
+  line-height: 1;
   color: #FFFFFF;
   text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__link {
+    font-size: 16px;
+    line-height: 1.12;
+    margin-right: 18px;
+  }
 }
