--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
   margin-top: 64px;
   padding-bottom: 24px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   list-style: none;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -14,4 +14,17 @@
 
 .footer li:last-of-type {
   margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    margin-top: 88px;
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    margin-top: 92px;
+  }
 }
