--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,7 +5,7 @@
     object-position: center;
     margin-left: -16px;
     margin-right: -16px;
-    /*overflow: hidden;*/
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
