--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,7 @@
   padding-right: 16px;
   min-width: 288px;
   max-width: 100vw;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
@@ -27,5 +28,4 @@
   font-weight: normal;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
-  list-style: none;
 }
