--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,14 +1,13 @@
 .place__image {
-  margin-top: 32px;
+  margin: 32px -16px 32px;
   width: 100vw;
-  margin-left: -16px;
-  margin-right: -16px;
   object-fit: cover;
   object-position: center;
 }
 
 @media screen and (min-width: 768px) {
   .place__image {
+    width: 100%;
     margin: 0;
   }
 }
