--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,10 +3,21 @@
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 163%;
+    line-height: 1.63;
     color: #FFFFFF;
 }
 
 .place__paragraph:first-of-type {
-    margin-bottom: 25px;
+    padding-bottom: 25px;
+}
+
+@media screen and (min-width: 1024px) {
+  .place__paragraph {
+    font-size: 18px;
+    line-height: 1.63;
+  }
+
+  .place__paragraph:first-of-type {
+    padding-bottom: 26px;
+  }
 }
