--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,7 +5,7 @@
 @media screen and (min-width: 768px) {
   .place {
     display: grid;
-    grid-template-columns: repeat(2, minmax(320px,1fr));
+    grid-template-columns: minmax(340px, 1fr) minmax(352px, 1fr);
     row-gap: 48px;
     column-gap: 28px;
     padding-top: 72px;
@@ -14,13 +14,17 @@
 
 @media screen and (min-width: 1024px) {
   .place {
+    grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr);
     padding-top: 80px;
     column-gap: 32px;
   }
 }
 
-@media screen and (min-width: 1024px) {
-    .place {
-      column-gap: 40px;
-    }
+@media screen and (min-width: 1280px) {
+  .place {
+    grid-template-columns: minmax(460px, 1fr) minmax(484px, 1fr);
+    column-gap: 40px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
 }
