--- a/blocks/header/__lang-link/_ru/header__lang-link_ru.css
+++ b/blocks/header/__lang-link/_ru/header__lang-link_ru.css
@@ -1,21 +1,16 @@
-.header_lang-link_ru {
-  color: #FFFFFF;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+.header__lang-link_ru {
   font-size: 18px;
   line-height: 1.11;
-  text-align: center;
-  text-decoration-line: underline;
   margin-top: 14px;
   margin-right: 18px;
   margin-left: calc(100% - 142px - 22px*2 - 18px);
   width: 22px;
   height: 20px;
+  text-decoration-line: underline;
 }
 
 @media screen and (min-width: 768px) {
-  .header_lang-link_ru {
+  .header__lang-link_ru {
     width: 30px;
     height: 28px;
     font-size: 24px;
