--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,6 +5,8 @@
     font-size: 16px;
     line-height: 1.63;
     color: #FFFFFF;
+    -webkit-font-smoothing: antialiased;
+    margin: 0;
 }
 
 .place__paragraph:first-of-type {
