--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,15 +1,18 @@
 .footer__copyright {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1;
-    color: #FFFFFF;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1;
+  color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
-    .footer__copyright {
-      font-size: 14px;
-      line-height: 1.14;
-    }
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1.14;
   }
+}
