--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,7 @@
   line-height: 1;
   color: #FFFFFF;
   text-decoration: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
