--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,7 @@
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
+  -webkit-font-smoothing: antialiased;
   text-align: center;
   text-decoration: none;
 }
