--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,6 @@
 .intro__list {
-  margin-top: 34px;
+  margin: 34px 0 0;
+  padding: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: bold;
@@ -7,6 +8,7 @@
   line-height: 1.5;
   color:#fff;
   list-style: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
