--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,13 @@
 .intro__text {
   color: #FFFFFF;
-  margin-top: 40px;
+  margin: 40px 0 0;
+  padding: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.63;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 1024px) {
