--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,11 +1,13 @@
 .intro__title {
   color: #FFFFFF;
-  margin-top: 64px;
+  margin: 64px 0 0;
+  padding: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 1.09;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
