--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,6 +9,12 @@
     text-align: center;
     margin: 0 auto 40px;
     max-width: 640px;
+    -webkit-font-smoothing: antialiased;
+}
+
+.lead__subtitle p{
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (min-width: 768px) {
