--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,6 +7,7 @@
   text-decoration-line: underline;
   color: #FFFFFF;
   transition: opacity 0.1s linear;
+  -webkit-font-smoothing: antialiased;
 }
 
 .place__link:hover {
