--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,11 +1,13 @@
 .place__title {
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 1.09;
   color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
