--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,34 +1,24 @@
 .cover__title {
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 1.09;
   text-align: center;
+  align-self: center;
   color: #FFFFFF;
-  margin: 33px 16px 16px;
-  text-decoration: none;
-  position: absolute;
   -webkit-font-smoothing: antialiased;
+  margin: 0 16px 0;
+  padding: 0 0 16px;
+  max-width: 288px;
 }
 
 @media screen and (min-width: 768px) {
   .cover__title {
     font-size: 72px;
     line-height: 1.06;
-    width: 560px;
-    margin: 115px 104px 32px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .cover__title {
-    margin: 195px 232px 32px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .cover__title {
-    margin: 245px 312px 32px;
+    max-width: 560px;
+    margin: 0 auto;
+    padding: 0 0 32px;
   }
 }
