--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,35 @@
 .header__lang-link {
+  margin-top: 14px;
+  margin-right: 18px;
+  margin-left: calc(100% - 142px - 18px - 22px - 22px);
+  font-size: 18px;
+  line-height: 1.11;
   color: #FFFFFF;
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
   text-align: center;
   text-decoration: none;
+  transition: opacity 0.1s linear;
+  min-width: 22px;
+}
+
+.header__lang-link:last-of-type {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-link {
+    min-width: 30px;
+    font-size: 24px;
+    line-height: 1.17;
+    margin-top: 18px;
+    margin-left: calc(100% - 176px - 18px - 30px - 29px);
+  }
 }
