--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,10 @@
 .header {
   background-color: #2A2C2F;
   object-position: center;
-  width: 100%;
+  min-width: 288px;
   padding-top: 16px;
+  margin-left: 16px;
+  margin-right: 16px;
   display: flex;
   flex-direction: row;
 }
@@ -10,7 +12,15 @@
 @media screen and (min-width: 768px) {
   .header {
     padding-top: 28px;
+    margin-left: 24px;
+    margin-right: 24px;
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .header {
+    margin-left: 48px;
+    margin-right: 48px;
+  }
+}
 
