--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
-  margin: 34px 0 0;
+  margin: 34px 16px 0;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
@@ -13,6 +13,18 @@
 
 @media screen and (min-width: 768px) {
   .intro__list {
-    margin-top: 33px;
+    margin: 33px 24px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__list {
+    margin-left: 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .intro__list {
+    margin-left: 148px;
   }
 }
