--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,8 @@
 .intro__title {
   color: #FFFFFF;
-  margin: 64px 0 0;
+  margin: 64px 16px 0;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
@@ -12,7 +12,7 @@
 
 @media screen and (min-width: 768px) {
   .intro__title {
-    margin-top: 88px;
+    margin: 88px 24px 0;
     font-size: 54px;
     line-height: 1.07;
   }
@@ -20,6 +20,12 @@
 
 @media screen and (min-width: 1024px) {
   .intro__title {
-    margin-top: 92px;
+    margin: 92px 48px 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .intro__title {
+    margin: 92px 148px 0;
   }
 }
