--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,27 +1,23 @@
 .lead__subtitle {
     color: #fff;
-    font-family: Inter;
+    font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 1.25;
     background-color: #2A2C2F;
     text-align: center;
-    margin: 0 auto 40px;
+    margin: 0 16px 40px;
     max-width: 640px;
-    -webkit-font-smoothing: antialiased;
-}
-
-.lead__subtitle p{
-    margin: 0;
     padding: 0;
+    -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
 .lead__subtitle  {
     font-size: 30px;
     line-height: 1.2;
-    margin-bottom: 56px;
+    margin: 0 auto 56px;
   }
 }
 
