--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,25 +1,24 @@
 .lead__title {
+  margin: 48px 16px 16px;
+  padding: 0;
   color: #fff;
   font-weight: 900;
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-size: 40px;
   line-height: 1.1;
   background-color: #2A2C2F;
   text-align: center;
-  margin: 48px auto 16px;
-  padding: 0;
   justify-content: center;
   -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (min-width: 768px) {
   .lead__title {
-    margin-bottom: 32px;
+    margin: 48px auto 32px;
     font-size: 96px;
     line-height: 1.04;
-    width: 720px;
-    height: 200px;
+    max-width: 720px;
   }
 }
   
