--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,23 +1,7 @@
 .page {
   font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   background-color: #2A2C2F;
-  padding-left: 16px;
-  padding-right: 16px;
-  min-width: 288px;
-  max-width: 100vw;
+  min-width: 320px;
+  max-width: 1280px;
   box-sizing: border-box;
-}
-
-@media screen and (min-width: 768px) {
-  .page {
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .page {
-    padding-left: 48px;
-    padding-right: 48px;
-  }
 }
