--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,5 @@
 .photo-grid {
-  margin-top: 64px;
-  margin-bottom: 14px;
+  margin: 64px 16px 14px;
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
   grid-template-columns: repeat(auto-fit,  minmax(284px, 1fr));
@@ -11,16 +10,14 @@
 
 @media screen and (min-width: 768px) {
   .photo-grid {
-    margin-top: 88px;
-    margin-bottom: 16px;
+    margin: 88px 24px 16px;
     gap: 16px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .photo-grid {
-    margin-top: 92px;
-    margin-bottom: 12px;
+    margin: 92px 48px 12px;
     gap: 14px;
   }
 }
