--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,5 @@
 .place__image {
-  margin: 32px -16px 32px;
+  margin: 32px 0 32px;
   width: 100vw;
   object-fit: cover;
   object-position: center;
