--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,16 +1,22 @@
 .place__paragraph {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 1.63;
-    color: #FFFFFF;
-    -webkit-font-smoothing: antialiased;
-    margin: 0;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.63;
+  color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
+  margin: 0 16px;
 }
 
 .place__paragraph:first-of-type {
     padding-bottom: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .place__paragraph {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
