--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,8 @@
 .place__title {
   margin: 0;
+  margin-left: 16px;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
@@ -12,6 +13,7 @@
 
 @media screen and (min-width: 768px) {
   .place__title {
+    margin: 0;
     font-size: 42px;
     line-height: 1.1;
   }
