--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,6 +9,8 @@
     row-gap: 48px;
     column-gap: 28px;
     padding-top: 72px;
+    margin-left: 24px;
+    margin-right: 24px;
   }
 }
 
@@ -16,6 +18,8 @@
   .place {
     grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr);
     padding-top: 80px;
+    margin-left: 48px;
+    margin-right: 48px;
     column-gap: 32px;
   }
 }
@@ -24,7 +28,7 @@
   .place {
     grid-template-columns: minmax(460px, 1fr) minmax(484px, 1fr);
     column-gap: 40px;
-    padding-left: 100px;
-    padding-right: 100px;
+    margin-left: 148px;
+    margin-right: 148px;
   }
 }
